--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -1,12 +1,14 @@
-name: Deploy the backend
+name : build docker image and push to deocker hub
+
 on:
   push:
-    branches: [ main ]
-jobs: 
+    branches: [main]
+
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
+      - name: checkout the code
         uses: actions/checkout@v2
 
       - name: Docker login
@@ -14,16 +16,14 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build and push 
+
+
+      - name: Docker build
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./docker/Dockerfile.backend
           push: true
-          tags: 100xdevs/todo-app-backend:${{ github.sha }}
-      - name: Deploy to the VM
-        run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
-          chmod 700 /home/runner/ssh_key
-          ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@64.227.169.180 -t "docker stop user_backend && docker run --name user_backend -d -p 8080:8080 100xdevs/todo-app-backend:${{ github.sha }}"
+          tags: sushantdubey79/Todo-backend-application:${{ github.sha }}
+
+          
