--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -1,8 +1,8 @@
 FROM oven/bun:1
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
-ARG DATABASE_URL
+
 COPY ./packages ./packages
 COPY ./bun.lock ./bun.lock
 
@@ -12,9 +12,11 @@ COPY ./turbo.json ./turbo.json
 COPY ./apps/web ./apps/web
 
 RUN bun install
+
 RUN bun run db:generate
+
 RUN DATABASE_URL=${DATABASE_URL} bun run build
 
 EXPOSE 3000
 
-CMD ["bun", "run", "start:web"]
+CMD ["bun" , "run" , "start:web"]
